2004-08-30  Dan Winship  <danw@novell.com>

	* configure.in: 1.5.94.1: brown paper bag release to sync with
	evolution 1.5.94.1

2004-08-29  Hasbullah Bin Pit <sebol@my-penguin.org>

        * configure.in: Added "ms" to ALL_LINGUAS.

2004-08-27  Dan Winship  <danw@novell.com>

	* configure.in: version 1.5.94

	* NEWS: Update

2004-08-27  Dan Winship  <danw@novell.com>

	* lib/e2k-context.c (e2k_soup_message_new,
	e2k_soup_message_new_full, e2k_context_queue_message,
	e2k_context_send_message): Remove anachronisms from the docs
	(e2k_context_put_new): s/POST/PUT/ in docs.
	(e2k_context_bproppatch_start): define BPROPPATCH
	
2004-08-27  Dan Winship  <danw@novell.com>

	* lib/e2k-global-catalog.c (e2k_global_catalog_reconnect): Hm,
	remove this. It's not The Right Thing any more.

	* addressbook/e-book-backend-gal.c (gal_reconnect): Use
	e2k_global_catalog_get_ldap instead of
	e2k_global_catalog_reconnect. #63546
	(get_contact, get_contact_list, start_book_view): Use
	bl->priv->ldap rather than caching it in a local variable since it
	may change after a call to gal_reconnect.

2004-08-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-account.c (hierarchy_removed_folder): Typo error fix

2004-08-27  Sarfraaz Ahmed <asarfraaz@novell.com>

        * storage/exchange-account.c (hierarchy_new_folder): Avoid duplications
        in the folders hashtable. The internal uri for favorites and public
        folders are same and should not be overwritten. Also emit the signal
        only if the hashtable was updated. This fixes #64235.
        (hierarchy_removed_folder): Do not remove the internal_uri entry for
        favourite folders, since this is shared by the public folder as well.

2004-08-27  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-gal.c: More un-debug-spewing

2004-08-26  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-exchange.c (d): Turn off debug macro

	* addressbook/e-book-backend-gal.c (d): Likewise
