@@ -1,3 +1,8 @@
+2004-09-02  Dan Winship  <danw@novell.com>
+
+	* lib/*: Various updates to doc comments, with a few changes to
+	data structures as well, to appease gtk-doc.
+
 2004-08-30  Dan Winship  <danw@novell.com>
 
 	* configure.in: 1.5.94.1: brown paper bag release to sync with
